--- a/django/docker-compose.yaml
+++ b/django/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: "3"
+version: '3'
 
 services:
   app:
@@ -7,3 +7,5 @@ services:
       - .:/home/python/app
     ports:
       - 8000:8000
+    extra_hosts:
+      - "host.docker.internal:172.17.0.1"
