--- a/django/.env.example
+++ b/django/.env.example
@@ -1,4 +1,5 @@
 DEBUG=true
-SECRET_KEY="django-insecure--423m#+3g4hai+wnz6t6ok==ww*)(v^4hik-iq^#+(yq60n4&!"
+SECRET_KEY="django-insecure-d)4!!l8v0#uag-@(h0h$y7*$pcmtkl9oodd2d5gp*9@ntnm0%8"
 ALLOWED_HOSTS=*
+#DATABASE_URL=postgres://postgres:postgres@db:5432/postgres
 DATABASE_URL=sqlite:///db.sqlite3
