--- a/django/Pipfile
+++ b/django/Pipfile
@@ -4,11 +4,15 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "4.1.4"
-django-environ = "*"
-dj-database-url = "*"
+django = "4.1.3"
+django-environ = "0.9.0"
+dj-database-url = "1.0.0"
+djangorestframework = "3.14.0"
+django-cors-headers = "3.13.0"
+confluent-kafka = "1.9.2"
 
 [dev-packages]
+autopep8 = "2.0.0"
 
 [requires]
 python_version = "3.10"
