--- a/next/package.json
+++ b/next/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.17",
     "@next/font": "^13.0.6",
+    "axios": "^1.2.2",
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
