--- a/ms-consolidacao/docker-compose.yaml
+++ b/ms-consolidacao/docker-compose.yaml
@@ -1,7 +1,7 @@
-version: "3"
+version: '3'
 
 services:
-  mysql:
+  mysql: 
     image: mysql:5.7
     restart: always
     environment:
@@ -68,7 +68,7 @@ services:
   #     CONTROL_CENTER_MONITORING_INTERCEPTOR_TOPIC_PARTITIONS: 1
   #     CONFLUENT_METRICS_TOPIC_REPLICATION: 1
   #     PORT: 9021
-
+  
   # kafka-topics-generator:
   #   image: confluentinc/cp-server:7.3.0
   #   depends_on:
