--- a/next/package.json
+++ b/next/package.json
@@ -1,5 +1,6 @@
 {
   "name": "next",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -13,18 +14,21 @@
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.16",
-    "@mui/material": "^5.10.17",
+    "@mui/material": "^5.10.16",
     "@next/font": "^13.0.6",
-    "axios": "^1.2.2",
+    "axios": "^1.2.1",
+    "date-fns": "^2.29.3",
     "next": "13.0.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
-    "@types/node": "18.11.12",
+    "@types/node": "18.11.10",
     "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.9",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
-    "typescript": "4.9.4"
+    "typescript": "4.9.3"
   }
 }
